--- a/angular.json
+++ b/angular.json
@@ -29,17 +29,24 @@
                             {
                                 "glob": "**/*",
                                 "input": "public"
-                            }
+                            },
+                            "src/assets"
                         ],
                         "styles": [
                             "@angular/material/prebuilt-themes/azure-blue.css",
                             "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
                             "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
                             "node_modules/remixicon/fonts/remixicon.css",
-                            "src/styles.scss"
+                            "src/styles.scss",
+                            "src/assets/css/plugins.css",
+                            "src/assets/css/style.css",
+                            "src/assets/css/dark-style.css"
                         ],
                         "scripts": [
-                            "node_modules/apexcharts/dist/apexcharts.min.js"
+                            "node_modules/apexcharts/dist/apexcharts.min.js",
+                            "src/assets/js/jquery.min.js",
+                            "src/assets/js/plugins.js",
+                            "src/assets/js/scripts.js"
                         ]
                     },
                     "configurations": {
